--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,6 @@
 html {
   --line-color: #e5e7eb;
   scroll-behavior: smooth;
-  
 }
 @keyframes smoothScrollAnimation {
   0% {
@@ -31,9 +30,9 @@ html.dark {
   @apply border border-black/10;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   width: 0px;
-}
+} */
 
 .text-gr {
   background-image: linear-gradient(to bottom, #e2e8f0, #4a5568);
